--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="lgV5C.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Anilton Torres Manuel Alfredo" />
     <meta
       name="description"
       content="Universidade Metodista de Angola"
